[tool.poetry]
name = "repl_nix_ppvnpv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.10.2"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
